--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h2>Work Experience</h2>
     <ul>
       <li>
-        <h3>Technical Support Specialist - CGS (Computer Generated Solutions)</h3>
+        <h3>Help Desk Support - CGS (Computer Generated Solutions)</h3>
         <p>July 2025 - Present</p>
         <ul>
           <li>Mobile voice : GSM</li>
